# audiodecoder.openmpt

./: .gitignore  CMakeLists.txt  FindOpenmpt.cmake  README.md  azure-pipelines.yml  copy_resources.sh
.github/workflows/: build.yml  sync-addon-metadata-translations.yml
audiodecoder.openmpt/: addon.xml.in
audiodecoder.openmpt/resources/: settings.xml
audiodecoder.openmpt/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.openmpt/resources/language/resource.language.sv_se/: strings.po
depends/windows/openmpt/: CMakeLists.txt  openmpt.sha256  openmpt.txt
src/: OpenMptCodec.cpp  OpenMptCodec.h
